--- a/index.html
+++ b/index.html
@@ -3,34 +3,71 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Outline Kerala News App - Download</title>
+  <title>Download Outline Kerala News App</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
   <style>
-    body { 
-      font-family: sans-serif; 
-      text-align: center; 
-      padding: 50px; 
-      background-color: #f9f9f9;
+    body {
+      font-family: 'Inter', sans-serif;
+      background-color: #f3f4f6;
+      margin: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
     }
-    h1 { color: #333; }
-    p { font-size: 18px; }
-    button {
-      padding: 15px 30px;
-      font-size: 18px;
-      background-color: #007bff;
+    .card {
+      background: white;
+      padding: 40px 30px;
+      border-radius: 16px;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
+      max-width: 400px;
+      width: 100%;
+      text-align: center;
+    }
+    .card img {
+      width: 100px;
+      margin-bottom: 20px;
+    }
+    h1 {
+      font-size: 24px;
+      color: #1f2937;
+      margin-bottom: 10px;
+    }
+    p {
+      font-size: 16px;
+      color: #4b5563;
+      margin-bottom: 30px;
+    }
+    .download-btn {
+      padding: 15px 25px;
+      font-size: 16px;
+      font-weight: 600;
+      background-color: #10b981;
       color: white;
       border: none;
       border-radius: 8px;
       cursor: pointer;
+      transition: background 0.3s ease;
+      text-decoration: none;
+      display: inline-block;
     }
-    button:hover { background-color: #0056b3; }
+    .download-btn:hover {
+      background-color: #059669;
+    }
+    .note {
+      font-size: 13px;
+      color: #6b7280;
+      margin-top: 20px;
+    }
   </style>
 </head>
 <body>
-  <h1>Download Outline Kerala News App</h1>
-  <p>Stay updated with the latest news from Kerala.</p>
-  <a href="app-release.apk" download>
-    <button>Download APK</button>
-  </a>
-  <p style="margin-top: 20px;">If prompted, allow installation from unknown sources in your phone settings.</p>
+  <div class="card">
+    <img src="C:\Users\gopik\Downloads\WhatsApp Image 2025-04-15 at 3.28.18 PM.jpeg" alt="Outline Kerala Logo" />
+    <h1>Download the Outline Kerala News App</h1>
+    <p>Get the latest news updates from Kerala, straight to your phone.</p>
+    <a href="app-release.apk" download class="download-btn">Download APK</a>
+    <p class="note">⚠️ Enable "Install from Unknown Sources" in your phone settings if prompted.</p>
+  </div>
 </body>
 </html>
