Update image src for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 </head>
 <body>
   <div class="card">
-    <img src="C:\Users\gopik\Downloads\WhatsApp Image 2025-04-15 at 3.28.18 PM.jpeg" alt="Outline Kerala Logo" />
+  <img src="outline-logo.jpeg" alt="Outline Kerala Logo" />
     <h1>Download the Outline Kerala News App</h1>
     <p>Get the latest news updates from Kerala, straight to your phone.</p>
     <a href="app-release.apk" download class="download-btn">Download APK</a>
